                      ---------------------
This file should be used by the test developer to briefly summarize all major
modifications introduced in the code and keep track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

05/11/2014 - I.Hrivnacova (p6decayer-V10-00-02)
-------------------------
- Added common directory via svn:externals property;
  in this tag based on excommon-V10-00-05;
  updated CMake and GNUmake files and documentation

11/06/2014 - I.Hrivnacova (p6decayer-V10-00-01)
-------------------------
- Fixed path to copy_files.sh, clean_files.sh in GNUmakefile
  (this makes GNUmake build working with Geant4 installation via
   CMake)

28/05/2014 - I.Hrivnacova (p6decayer-V10-00-00)
-------------------------
Code clean-up:
- Removed P6DPhysicsList
- Fixed order of instantiating Vis/UI (according to B1)
- replaced std::cerr with G4cerr

02/12/2013 - I.Hrivnacova (p6decayer-V09-06-01)
-------------------------
- Fixed warnings about shadowed variables; removed tabulations

11/07/2013 - I.Hrivnacova (p6decayer-V09-06-00)
-------------------------
- Fixed use of particle iterator in P6DExtDecayerPhysics.cc
  (which was changed with changes for MT)

24/08/2012 - I.Hrivnacova (p6decayer-V09-05-02)
-------------------------
- Fixed documentation files

05/06/2012 - I.Hrivnacova (p6decayer-V09-05-01)
-------------------------
- Updated pythia6_decayer.in macro:
  - added initialization (now required)
  - added call to /pythia6Decayer/verbose
- Fixed SharedFilesList.txt
- Limited G4Pythia6Decayer verbose levels to 0, 1
- Updated reference output
- Updated Pythia6 version in README file

11/04/2012 - I.Hrivnacova (p6decayer-V09-05-00)
-------------------------
- Introduced use of classes from common
- Introduced a physics builder for adding the external decayer to
  an existing physics list 